Fixed font zoom on mobile viewports

--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -63,6 +63,7 @@ textarea {
 input {
   min-height: 1.5rem;
   max-width: 50ch;
+  font-size: 16px;
 }
 
 textarea {
